--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,7 @@ Thumbs.db
 
 # Node modules (if using any JS tooling)
 node_modules/
+
+# Claude Subagents & Settings
+awesome-claude-code-subagents/
+.claude/
