--- a/monitoring/alertmanager.yml
+++ b/monitoring/alertmanager.yml
@@ -26,28 +26,61 @@ receivers:
   - name: 'default'
     # Default receiver (logs only)
 
-  # Critical alerts - send to Slack/Discord
+  # Critical alerts - send to Slack/Discord/Telegram
   - name: 'critical-alerts'
-    # Uncomment and configure when you have webhook URLs
+    # Slack configuration
     # slack_configs:
     #   - api_url: 'YOUR_SLACK_WEBHOOK_URL'
     #     channel: '#bega-l2-alerts'
     #     title: 'CRITICAL: {{ .GroupLabels.alertname }}'
     #     text: '{{ range .Alerts }}{{ .Annotations.description }}{{ end }}'
 
-    # Discord webhook (alternative)
+    # Discord webhook
     # webhook_configs:
     #   - url: 'YOUR_DISCORD_WEBHOOK_URL'
     #     send_resolved: true
 
+    # Telegram configuration (추천)
+    # telegram_configs:
+    #   - bot_token: 'YOUR_BOT_TOKEN'  # 예: 123456789:ABCdefGHIjklMNOpqrsTUVwxyz
+    #     chat_id: YOUR_CHAT_ID  # 예: 123456789 (개인) 또는 -100123456789 (그룹)
+    #     send_resolved: true
+    #     parse_mode: 'HTML'
+    #     message: |
+    #       🚨 <b>CRITICAL ALERT</b> 🚨
+    #
+    #       <b>{{ .GroupLabels.alertname }}</b>
+    #
+    #       {{ range .Alerts }}
+    #       <b>컴포넌트:</b> {{ .Labels.component }}
+    #       <b>설명:</b> {{ .Annotations.description }}
+    #
+    #       ⏰ {{ .StartsAt.Format "2006-01-02 15:04:05" }}
+    #       {{ end }}
+
   # Warning alerts
   - name: 'warning-alerts'
-    # Uncomment and configure when you have webhook URLs
+    # Slack configuration
     # slack_configs:
     #   - api_url: 'YOUR_SLACK_WEBHOOK_URL'
     #     channel: '#bega-l2-warnings'
     #     title: 'WARNING: {{ .GroupLabels.alertname }}'
     #     text: '{{ range .Alerts }}{{ .Annotations.description }}{{ end }}'
+
+    # Telegram configuration (추천)
+    # telegram_configs:
+    #   - bot_token: 'YOUR_BOT_TOKEN'
+    #     chat_id: YOUR_CHAT_ID
+    #     send_resolved: true
+    #     parse_mode: 'HTML'
+    #     message: |
+    #       ⚠️ <b>WARNING</b>
+    #
+    #       <b>{{ .GroupLabels.alertname }}</b>
+    #
+    #       {{ range .Alerts }}
+    #       <b>설명:</b> {{ .Annotations.description }}
+    #       {{ end }}
 
 # Inhibition rules
 inhibit_rules:
