--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -37,8 +37,8 @@ http {
     types_hash_max_size 2048;
 
     # Rate limiting zone
-    # 10 requests per second per IP, with burst capacity of 20
-    limit_req_zone $binary_remote_addr zone=rpc_limit:10m rate=10r/s;
+    # Increased to 100 requests per second for faster batcher sync
+    limit_req_zone $binary_remote_addr zone=rpc_limit:10m rate=100r/s;
     limit_req_status 429;
 
     # Upstream backend (op-geth)
@@ -70,9 +70,9 @@ http {
         # RPC endpoint
         location / {
             # Apply rate limiting
-            # burst=20: Allow up to 20 requests in a burst
+            # burst=200: Allow larger bursts for sync
             # nodelay: Don't delay burst requests
-            limit_req zone=rpc_limit burst=20 nodelay;
+            limit_req zone=rpc_limit burst=200 nodelay;
 
             # Block dangerous RPC methods (optional - uncomment to enable)
             # if ($request_body ~ "personal_|admin_|miner_|debug_unlockAccount") {
